# fastapi-guide

./: pyproject.toml
00_intro/: 00_asyncio_create_server.py  00_unicorn_app.py  01_simple_app.py  02_openapi_extended_app.py  03_pydantic_usage.py  03_request_object_focused_app.py  README.md  pyproject.toml
00_intro/04_pydantic_usage/: application.py  schemas.py  settings.py  storage.json  storage.py
00_intro/05_websocket_usage/: application.py  service.py  settings.py  simple_queue.py
00_intro/05_websocket_usage/static/: style.css
00_intro/05_websocket_usage/templates/: seat_map.html
00_to_add/: 05_websocket_usage.py
01_air-travel-application/: README.md  sample.py
01_air-travel-application/src/: main.py  settings.py
01_air-travel-application/src/config/: exception_handlers.py  settings.py
01_air-travel-application/src/controller/dependencies/: auth.py  filter_dep.py  filters.py  pagination.py
01_air-travel-application/src/controller/routers/: __init__.py  companies.py  healthcheck.py  tickets.py  trips.py  users.py
01_air-travel-application/src/controller/schemas/: input.py  output.py  utils.py
01_air-travel-application/src/model/db_entities/: models.py
01_air-travel-application/src/model/services/: dto.py
01_air-travel-application/src/model/storage/: base.py  connection.py  exceptions.py
01_air-travel-application/src/models/: enum.py
01_air-travel-application/src/models/database/: models.py  serializers.py
01_air-travel-application/src/models/schemas/: __init__.py  input.py  output.py  (+1 more)
01_air-travel-application/tests/: factories.py
(+30 files in other folders)
