[tool.poetry]
name = "FastAPI guide"
version = "0.1.0"
description = ""
authors = ["German Golcov <gerleffx2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pydantic-factories = "^1.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
