[tool.poetry]
name = "FastAPI guide"
version = "0.1.0"
description = ""
authors = ["German Golcov <gerleffx2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
websockets = "^10.4"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
